<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/drawer_home"
            android:checked="true"
            android:icon="@drawable/home"
            android:title="@string/home"/>

        <item
            android:id="@+id/drawer_favourite"
            android:icon="@drawable/favourite"
            android:title="@string/favourite"/>

        <item
            android:id="@+id/drawer_downloaded"
            android:icon="@drawable/download"
            android:title="@string/downloaded"/>

        <item
            android:id="@+id/drawer_more"
            android:icon="@drawable/more"
            android:title="@string/more"/>

        <item
            android:id="@+id/drawer_settings"
            android:icon="@drawable/settings"
            android:title="@string/settings"/>
    </group>

</menu>